ci: Setup sonar project

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=go-project
+sonar.projectKey=asr13Sistemas_andrerodri13-fullcycle-sonarcloud
+sonar.organization=asr13sistemas
 
 sonar.sources=.
 sonar.exclusions=**/*_test.go
